--- a/MvcProjeKampi.BusinessLayer/MvcProjeKampi.BusinessLayer.csproj
+++ b/MvcProjeKampi.BusinessLayer/MvcProjeKampi.BusinessLayer.csproj
@@ -55,7 +55,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstract\ICategoryService.cs" />
+    <Compile Include="Abstract\IHeadingService.cs" />
     <Compile Include="Concrete\CategoryManager.cs" />
+    <Compile Include="Concrete\HeadingManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ValidationRules\CategoryValidator.cs" />
   </ItemGroup>
