--- a/MvcProjeKampi.WebUI/MvcProjeKampi.WebUI.csproj
+++ b/MvcProjeKampi.WebUI/MvcProjeKampi.WebUI.csproj
@@ -2375,6 +2375,8 @@
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Shared\_AdminLayout.cshtml" />
     <Content Include="Views\AdminCategory\Index.cshtml" />
+    <Content Include="Views\AdminCategory\AddCategory.cshtml" />
+    <Content Include="Views\AdminCategory\EditCategory.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
