--- a/MvcProjeKampi.BusinessLayer/MvcProjeKampi.BusinessLayer.csproj
+++ b/MvcProjeKampi.BusinessLayer/MvcProjeKampi.BusinessLayer.csproj
@@ -56,10 +56,13 @@
   <ItemGroup>
     <Compile Include="Abstract\ICategoryService.cs" />
     <Compile Include="Abstract\IHeadingService.cs" />
+    <Compile Include="Abstract\IWriterService.cs" />
     <Compile Include="Concrete\CategoryManager.cs" />
     <Compile Include="Concrete\HeadingManager.cs" />
+    <Compile Include="Concrete\WriterManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ValidationRules\CategoryValidator.cs" />
+    <Compile Include="ValidationRules\WriterValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MvcProjeKampi.DataAccessLayer\MvcProjeKampi.DataAccessLayer.csproj">
