--- a/MvcProjeKampi.DataAccessLayer/MvcProjeKampi.DataAccessLayer.csproj
+++ b/MvcProjeKampi.DataAccessLayer/MvcProjeKampi.DataAccessLayer.csproj
@@ -77,6 +77,26 @@
     <Compile Include="Migrations\202105251055312_mig_writer_edit.designer.cs">
       <DependentUpon>202105251055312_mig_writer_edit.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202105260817590_mig_writertitle.cs" />
+    <Compile Include="Migrations\202105260817590_mig_writertitle.designer.cs">
+      <DependentUpon>202105260817590_mig_writertitle.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202105261121405_mig_writerimage.cs" />
+    <Compile Include="Migrations\202105261121405_mig_writerimage.designer.cs">
+      <DependentUpon>202105261121405_mig_writerimage.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202105282011239_mig_writer_addstatus.cs" />
+    <Compile Include="Migrations\202105282011239_mig_writer_addstatus.designer.cs">
+      <DependentUpon>202105282011239_mig_writer_addstatus.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202105291418393_mig_contentStatusAdd.cs" />
+    <Compile Include="Migrations\202105291418393_mig_contentStatusAdd.designer.cs">
+      <DependentUpon>202105291418393_mig_contentStatusAdd.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202105291422430_mig_headingStatusAdd.cs" />
+    <Compile Include="Migrations\202105291422430_mig_headingStatusAdd.designer.cs">
+      <DependentUpon>202105291422430_mig_headingStatusAdd.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -96,6 +116,21 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202105251055312_mig_writer_edit.resx">
       <DependentUpon>202105251055312_mig_writer_edit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202105260817590_mig_writertitle.resx">
+      <DependentUpon>202105260817590_mig_writertitle.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202105261121405_mig_writerimage.resx">
+      <DependentUpon>202105261121405_mig_writerimage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202105282011239_mig_writer_addstatus.resx">
+      <DependentUpon>202105282011239_mig_writer_addstatus.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202105291418393_mig_contentStatusAdd.resx">
+      <DependentUpon>202105291418393_mig_contentStatusAdd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202105291422430_mig_headingStatusAdd.resx">
+      <DependentUpon>202105291422430_mig_headingStatusAdd.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
