--- a/MvcProjeKampi.WebUI/MvcProjeKampi.WebUI.csproj
+++ b/MvcProjeKampi.WebUI/MvcProjeKampi.WebUI.csproj
@@ -2416,6 +2416,8 @@
     <Content Include="Views\About\Index.cshtml" />
     <Content Include="Views\About\AboutPartial.cshtml" />
     <Content Include="Views\Contact\Index.cshtml" />
+    <Content Include="Views\Contact\GetContactDetails.cshtml" />
+    <Content Include="Views\Contact\MenuPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
